--- a/config/sidekiq_schedule.yml
+++ b/config/sidekiq_schedule.yml
@@ -3,3 +3,9 @@ create_goals_job:
   class: "CreateGoalsJob"
   queue: default
   args: []
+
+check_badge_job:
+  cron: "59 15 * * *"
+  class: "CheckBadgeJob"
+  queue: default
+  args: []
