--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "name": "eureka",
   "scripts": {
     "dokku": {
-      "predeploy": "bundle exec rake assets:precompile",
-      "postdeploy": "bundle exec rake db:migrate"
+    //  "predeploy": "bundle exec rake assets:precompile",
+      // "postdeploy": "bundle exec rake db:migrate"
     }
   }
 }
