--- a/app.json
+++ b/app.json
@@ -1,9 +1,3 @@
 {
-  "name": "eureka",
-  "scripts": {
-    "dokku": {
-    //  "predeploy": "bundle exec rake assets:precompile",
-      // "postdeploy": "bundle exec rake db:migrate"
-    }
-  }
+  "name": "eureka"
 }
