--- a/app.json
+++ b/app.json
@@ -1,3 +1,9 @@
 {
-  "name": "eureka"
+  "name": "eureka",
+  "scripts": {
+    "dokku": {
+      "predeploy": "bundle exec rake assets:precompile",
+      "postdeploy": "bundle exec rake db:migrate"
+    }
+  }
 }
